--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,13 @@
   --color-light-slate: #8e8f99;
 
   --light-bg-clr: #f4f4fd;
+
+  /*===others===*/
+  --indent: 24px;
+  --radius: 4px;
+  --feature-items: 4;
+  --project-items: 3;
+  --team-items: 4;
 }
 
 body {
@@ -21,7 +28,70 @@ body {
   letter-spacing: 0.02em;
 }
 
+/*---RESET STYLES---*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul,
+ol {
+  margin: 0px;
+  padding: 0px;
+}
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* 
+  outline: 2px solid red;
+  outline-offset: -2px; */
+}
+
 /* ====== HEADER ===== */
+
+.header {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  /* padding-top: 24px;
+  padding-bottom: 24px; */
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 1px solid #e7e9fc;
+  border-top: none; */
+}
+
+.logo-container {
+  display: flex;
+}
 
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -31,6 +101,16 @@ body {
   line-height: calc(24 / 18);
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.header-nav {
+  align-items: center;
+  display: flex;
+  margin-right: auto;
 }
 
 .header-studio {
@@ -45,6 +125,9 @@ body {
   color: var(--p-txt-clr);
   font-size: 16px;
   line-height: calc(24 / 16);
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-link,
@@ -53,6 +136,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
+  display: block;
 }
 
 .header-link:hover,
@@ -64,6 +148,8 @@ body {
 
 .address {
   font-style: normal;
+  display: flex;
+  gap: 40px;
 }
 
 .current {
@@ -84,6 +170,10 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+
+  margin-bottom: 72px;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .title-studio {
@@ -91,33 +181,58 @@ body {
   font-size: 20px;
   line-height: calc(24 / 20);
   color: var(--main-txt-clr);
+  margin-bottom: 8px;
 }
 
 /*===What are we doing===*/
+
+.visually-container {
+  width: 264px;
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
 
 .doing-txt {
   font-size: 36px;
   line-height: calc(40 / 36);
   text-align: center;
+  margin-bottom: 72px;
 }
 
 /*====Our Team====*/
+
+.team-card-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  box-shadow: 0px 1px 6px rgb(46 47 66 / 8%), 0px 1px 1px rgb(46 47 66 / 16%),
+    0px 2px 1px rgb(46 47 66 / 8%);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .team-name {
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24 / 20);
   color: var(--main-txt-clr);
+  margin-bottom: 8px;
 }
 
 .team-title {
   font-size: 36px;
   line-height: calc(40 / 36);
   text-align: center;
+  margin-bottom: 72px;
 }
 
 .team {
   background-color: var(--light-bg-clr);
+}
+
+.team-item {
+  flex-basis: calc(
+    (100% - var(--indent) * (var(--team-items) - 1)) / var(--team-items)
+  );
 }
 
 .team-item,
@@ -126,6 +241,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24 / 20);
+  width: 360px;
 }
 /*===feature==*/
 
@@ -133,26 +249,84 @@ body {
   color: var(--p-txt-clr);
   font-size: 16px;
   line-height: calc(24 / 16);
+  font-style: normal;
+  font-weight: 400;
 }
 
 .feature-item {
   font-weight: 500;
   font-size: 20px;
   line-height: calc(24 / 20);
+  flex-basis: calc(
+    (100% - var(--indent) * (var(--feature-items) - 1)) / var(--feature-items)
+  );
 }
 
 /*==HERO==*/
 
+section {
+  margin: 0;
+  padding: 0;
+}
+
 .hero-section {
   background-color: var(--main-bg-clr);
+  padding-top: 188px;
+  padding-bottom: 188px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .hero-txt {
   color: var(--color-white);
   font-size: 56px;
   line-height: calc(60 / 56);
+  margin-bottom: 48px;
+  width: 494px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.main-theses-container {
+  display: flex;
+  gap: 24px;
+}
+
+.main-theses,
+.doing,
+.team {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 /*====LIST===*/
+
+.header-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.feature-list {
+  display: flex;
+  gap: 24px;
+}
+
+.doing-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.doing-item {
+  flex-basis: calc(100% - 2 * 24) / 3;
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+  text-align: center;
+}
 
 .hero-list,
 .header-list,
@@ -161,6 +335,26 @@ body {
 .doing-list,
 .portfolio-list {
   list-style: none;
+}
+
+.portfolio-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  /* margin-bottom: 72px; */
+  padding-bottom: 72px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.portf-list {
+  display: flex;
+  gap: 48px 24px;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+
+  align-items: center;
 }
 
 /*===BUTTON===*/
@@ -181,6 +375,16 @@ body {
   background-color: var(--accent-txt-clr);
   color: var(--color-white);
 }
+.btn-hero {
+  min-width: 169px;
+  min-height: 56px;
+  border-radius: 4px;
+  padding: 15px 31px;
+  border: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .portfolio-btn {
   color: var(--logo-txt-clr);
@@ -189,7 +393,49 @@ body {
   box-sizing: border-box;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  padding: 12px 24px;
+  line-height: calc(24 / 16);
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
 }
+
+/*===PORTFOLIO===*/
+.portfolio-section {
+  padding-top: 96px;
+  padding-bottom: 120px;
+  background-color: var(--color-white);
+}
+
+.portfolio-btn-container {
+  display: flex;
+  gap: 24px;
+}
+
+.card-set {
+  gap: 48px 24px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-set-item {
+  flex-basis: calc(
+    (100% - var(--indent) * (var(--project-items) - 1)) / var(--project-items)
+  );
+}
+
+.wrapper {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 15px;
+}
+
 /*===FOOTER===*/
 
 footer {
@@ -199,6 +445,9 @@ footer {
 .footer-logo {
   font-size: 18px;
   line-height: calc(21 / 18);
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+  padding: 0px;
 }
 
 .footer-studio {
@@ -207,4 +456,10 @@ footer {
 
 .footer-paragraf {
   color: var(--footer-paragraf-txt);
+  width: 264px;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
