--- a/css/styles.css
+++ b/css/styles.css
@@ -208,11 +208,18 @@ ol {
   margin-bottom: 72px;
 }
 
-.customers-txt {
-  font-size: 36px;
-  line-height: calc(40 / 36);
-  text-align: center;
-  margin-bottom: 72px;
+.doing {
+  padding-bottom: 120px;
+}
+
+.doing-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.doing-item {
+  flex-basis: calc(100% - 2 * 24) / 3;
 }
 
 /*====Our Team====*/
@@ -256,10 +263,12 @@ ol {
   display: flex;
 }
 
-.links-team-footer {
-  padding: 20%;
-  border-radius: 50%;
-  display: flex;
+.links-team:hover {
+  background-color: var(--ocean-bg-color);
+}
+
+.links-team:focus {
+  background-color: var(--ocean-bg-color);
 }
 
 .team-item,
@@ -270,6 +279,19 @@ ol {
   line-height: calc(24 / 20);
   width: 360px;
 }
+
+.main-theses,
+.team {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  text-align: center;
+}
+
 /*===feature==*/
 
 .paragraph {
@@ -342,10 +364,14 @@ section {
   height: 112px;
   background: var(--light-bg-clr);
   border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 
 .icon-main {
-  margin: 24px 102px;
+  display: flex;
 }
 
 .icon-main:hover {
@@ -357,10 +383,7 @@ section {
   gap: 24px;
 }
 
-.doing {
-  padding-bottom: 120px;
-}
-
+/*===CUSTOMERS===*/
 .customers {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -375,16 +398,10 @@ section {
   fill: var(--ocean-bg-color);
 }
 
-.customers-item {
-  border: 1px solid var(--color-light-slate);
-  border-radius: 4px;
+/* .customers-item {
   width: 168px;
   height: 88px;
-}
-
-.customers-item:hover {
-  border-color: var(--ocean-bg-color);
-}
+} */
 
 .customers-list {
   display: flex;
@@ -392,10 +409,27 @@ section {
   justify-content: center;
   gap: 24px;
 }
-.main-theses,
-.team {
-  padding-top: 120px;
-  padding-bottom: 120px;
+
+.customers-txt {
+  font-size: 36px;
+  line-height: calc(40 / 36);
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.customers-link {
+  border: 1px solid var(--color-light-slate);
+  border-radius: 4px;
+  width: 168px;
+  height: 88px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: #404bbf;
 }
 
 /*====LIST===*/
@@ -411,26 +445,7 @@ section {
   gap: 24px;
 }
 
-.doing-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-}
-
 .costomers-list {
-  display: flex;
-}
-
-.doing-item {
-  flex-basis: calc(100% - 2 * 24) / 3;
-}
-.team-list {
-  display: flex;
-  gap: 24px;
-  text-align: center;
-}
-
-.icon-footer {
   display: flex;
 }
 
@@ -439,9 +454,6 @@ section {
   justify-content: center;
   align-items: center;
   gap: 24px;
-}
-
-.icon-footer {
 }
 
 .icon-list {
@@ -455,24 +467,7 @@ section {
   margin-top: 8px;
 }
 
-.icon-list-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  margin-top: 8px;
-}
-
-.icon-list:hover {
-  background-color: var(--ocean-bg-color);
-}
-
-.icon-list-footer:hover {
-  background-color: var(--color-green);
-}
+/*===LIST-STYLE==*/
 
 .hero-list,
 .header-list,
@@ -523,6 +518,7 @@ section {
   background-color: var(--accent-txt-clr);
   color: var(--color-white);
 }
+
 .btn-hero {
   min-width: 169px;
   min-height: 56px;
@@ -554,16 +550,21 @@ section {
   padding: 12px 24px;
 }
 
+.portfolio-btn:focus,
+.portfolio-btn:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.portfolio-btn-container {
+  display: flex;
+  gap: 24px;
+}
+
 /*===PORTFOLIO===*/
+
 .portfolio-section {
   padding-top: 96px;
   padding-bottom: 120px;
   background-color: var(--color-white);
-}
-
-.portfolio-btn-container {
-  display: flex;
-  gap: 24px;
 }
 
 .card-set {
@@ -582,7 +583,9 @@ section {
 .wrapper {
   border: 1px solid #e7e9fc;
   border-top: none;
-  padding: 15px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
 }
 
 /*===FOOTER===*/
@@ -633,4 +636,29 @@ footer {
   align-items: start;
   justify-content: start;
   gap: 16px;
+}
+
+.icon-list-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-top: 8px;
+}
+
+.icon-footer {
+  display: flex;
+}
+
+.links-team-footer {
+  padding: 20%;
+  border-radius: 50%;
+  display: flex;
+}
+.links-team-footer:hover,
+.links-team-footer:focus {
+  background-color: var(--color-green);
 }
