--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ ol {
 .header {
   border: 1px solid #e7e9fc;
   border-top: none;
-  box-shadow: 1px 2px 1px rgba(46, 47, 66, 0.08),
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
@@ -605,7 +605,7 @@ section {
 .portfolio-section {
   padding-top: 96px;
   padding-bottom: 120px;
-  background-color: var(--color-white);
+  /* background-color: var(--color-white); */
 }
 
 .card-set {
