--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --color-white: #ffffff;
   --accent-txt-clr: #404bbf;
   --footer-paragraf-txt: #e7e9fc;
+  --modal-text-color: #8e8f99;
 
   /*BGRND COLOR*/
   --main-bg-clr: #2e2f42;
@@ -13,6 +14,7 @@
   --color-light-slate: #8e8f99;
   --ocean-bg-color: #404bbf;
   --light-bg-clr: #f4f4fd;
+  --aggrie-txt-clr: #757575;
 
   /*SVG CLR*/
   --fill-clr-icons: #afb1b8;
@@ -763,7 +765,7 @@ footer {
   height: 40px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  margin-top: 8px;
+  margin-top: 16px;
 }
 
 .icon-footer {
@@ -780,6 +782,77 @@ footer {
 .links-team-footer:hover,
 .links-team-footer:focus {
   background-color: var(--color-green);
+}
+.footer-modal-container {
+  margin-top: 16px;
+  display: flex;
+  width: 453px;
+}
+
+.footer-form-div {
+  display: flex;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  width: 453px;
+  align-items: baseline;
+  flex-direction: column;
+}
+
+.footer-subscribe {
+  display: flex;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  letter-spacing: 0.04em;
+
+  color: var(--color-white);
+}
+.left-footer {
+  margin-right: 80px;
+}
+
+.footer-label {
+}
+.form-footer {
+  margin-right: 24px;
+}
+.footer-input {
+  width: 264px;
+  height: 40px;
+  background-color: inherit;
+  border: 1px solid var(--aggrie-txt-clr);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 8px 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-input:focus {
+  border-color: var(--logo-txt-clr);
+}
+
+.footer-input:focus-visible {
+  border-color: var(--logo-txt-clr);
+}
+.footer-btn-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  gap: 16px;
+  border: none;
+  color: var(--color-white);
+
+  background-color: var(--logo-txt-clr);
+  border-radius: 4px;
+  transition: background-color 250ms var(--time-cubik);
+}
+
+.footer-btn-form:hover,
+.footer-btn-form:focus {
+  background-color: var(--accent-txt-clr);
 }
 
 /* ===MODAL WINDOW=== */
@@ -801,7 +874,7 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
   min-height: 576px;
-  min-width: 408px;
+  width: 408px;
   border-radius: 4px;
   background-color: var(--modal-color);
 }
@@ -834,4 +907,216 @@ footer {
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+.modal {
+}
+
+.modal-title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  width: auto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+
+  text-align: center;
+}
+
+.modal-form {
+  display: block;
+  padding: 14px 24px;
+  /* position: relative;
+  left: 24px;
+  top: 14px; */
+}
+
+.modal-form-label {
+  font-size: 12px;
+  line-height: calc(16 / 12);
+
+  letter-spacing: 0.04em;
+
+  color: var(--modal-text-color);
+  margin-bottom: 4px;
+  display: block;
+}
+
+.modal-form-group {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.modal-form-field {
+  display: block;
+
+  padding-left: 38px;
+  padding-right: 38px;
+
+  width: 360px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: outline-color 250ms var(--time-cubik);
+}
+
+.modal-form-icon {
+  fill: var(--main-txt-clr);
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms var(--time-cubik);
+  pointer-events: none;
+}
+
+.modal-form-field:focus + .modal-form-icon {
+  fill: var(--portfolio-bg-clr);
+}
+
+.modal-form-comment {
+  display: block;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+
+  width: 360px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(16 / 12);
+
+  letter-spacing: 0.04em;
+
+  resize: none;
+
+  margin-bottom: 16px;
+
+  transition: outline-color 250ms var(--time-cubik);
+}
+
+.modal-form-aggrie {
+  display: flex;
+  margin-bottom: 24px;
+  align-items: center;
+}
+
+.span-aggrie {
+  user-select: none;
+}
+
+.span-aggrie {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(16 / 12);
+
+  letter-spacing: 0.04em;
+
+  color: var(--aggrie-txt-clr);
+}
+
+.btn-modal:focus,
+.btn-modal:hover {
+  background-color: var(--accent-txt-clr);
+}
+
+.btn-modal {
+  display: block;
+  /* margin-left: 96px; */
+  margin-right: auto;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 24px;
+
+  width: 169px;
+  height: 56px;
+  background-color: var(--logo-txt-clr);
+  color: var(--color-white);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background-color 250ms var(--time-cubik);
+
+  filter: grayscale(1);
+  background-color: transparent;
+  color: inherit;
+  cursor: not-allowed;
+}
+
+.modal-checkdox {
+  position: absolute;
+
+  appearance: none;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 2px solid;
+  border-radius: 3px;
+  margin-right: 8px;
+  color: var(--main-txt-clr);
+
+  transition: background-color 250ms var(--time-cubik),
+    border-color 250ms var(--time-cubik);
+  background-image: url(../images/svg/symbol-defs.svg#icon-cheked);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14px;
+  fill: var(--color-white);
+}
+
+.modal-checkbox-svg {
+  position: relative;
+  top: 50%;
+  left: 1px;
+  /* fill: var(--color-white); */
+  padding: 2px;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  transition: 250ms var(--time-cubik);
+  transition-delay: 250ms;
+  transform: translateY(-100%);
+}
+
+.modal-checkdox:checked {
+  background-color: var(--ocean-bg-color);
+  border-color: var(--ocean-bg-color);
+  position: absolute;
+}
+
+.modal-checkdox:checked + .modal-checkbox-svg {
+  opacity: 1;
+  transform: translateY(0);
+  fill: var(--color-white);
+}
+
+.privacy-pilicy {
+  color: var(--logo-txt-clr);
+  transition: color 250ms var(--time-cubik);
+}
+
+.privacy-pilicy:hover,
+.privacy-pilicy:focus {
+  color: var(--accent-txt-clr);
+}
+
+.modal-form-field:focus,
+.modal-form-comment:focus {
+  outline-color: var(--portfolio-bg-clr);
+  /* fill: var(--portfolio-bg-clr); */
 }
