--- a/css/styles.css
+++ b/css/styles.css
@@ -828,19 +828,51 @@ footer {
 }
 
 .right-footer {
-  margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 72px;
+  /* margin-right: 120px; */
+}
+
+@media screen and (min-width: 768px) {
+  .right-footer {
+    margin: 0%;
+  }
 }
 
 .footer-flex {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-flex {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
 .footer-logo {
   font-size: 18px;
   line-height: calc(21 / 18);
   margin-bottom: 16px;
-  padding-bottom: 16px;
+  margin-right: auto;
+  margin-left: auto;
+
   padding: 0px;
+}
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    margin-left: 0%;
+  }
 }
 
 .footer-studio {
@@ -855,6 +887,14 @@ footer {
 .footer-container {
   padding-top: 100px;
   padding-bottom: 100px;
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    padding-top: 96px;
+    padding-bottom: 96px;
+    /* padding-left: 108px;  */
+    /* padding: 96px; */
+  }
 }
 
 .item-footer {
@@ -892,11 +932,31 @@ footer {
 .footer-modal-container {
   margin-top: 16px;
   display: flex;
-  width: 453px;
+  /* width: 453px; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-modal-container {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
 .footer-form-div {
-  width: 453px;
+  /* width: 453px; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-form-div {
+    align-items: flex-start;
+    /* flex-direction: row;
+    gap: 24px; */
+  }
 }
 
 .footer-subscribe {
@@ -907,12 +967,32 @@ footer {
 
   color: var(--color-white);
 }
+/* @media screen and (min-width: 768px) {
+  .footer-subscribe {
+    margin-bottom: 16px;
+  }
+} */
+
 .left-footer {
-  margin-right: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 72px;
+  /* margin-right: 80px; */
+}
+
+@media screen and (min-width: 768px) {
+  .left-footer {
+    align-items: flex-start;
+    margin: 0%;
+  }
 }
 
 .footer-input {
-  width: 264px;
+  /* width: 264px;
+  height: 40px; */
+  width: 398px;
   height: 40px;
   background-color: inherit;
   border: 1px solid var(--aggrie-txt-clr);
@@ -920,7 +1000,16 @@ footer {
   border-radius: 4px;
   padding: 8px 16px;
   color: rgba(255, 255, 255, 0.6);
-  margin-right: 24px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-input {
+    width: 264px;
+    margin-right: 24px;
+  }
 }
 
 .footer-input:focus {
@@ -938,6 +1027,8 @@ footer {
   gap: 16px;
   border: none;
   color: var(--color-white);
+  width: 165px;
+  height: 40px;
 
   background-color: var(--logo-txt-clr);
   border-radius: 4px;
